--- a/sass/modules/about-info-card/_about-info-card.scss
+++ b/sass/modules/about-info-card/_about-info-card.scss
@@ -8,7 +8,7 @@
       }
     }
     .icon-card-wrapper{
-      display: flex;
+      display: flex !important;
       flex-direction: column;
       gap: 40px;
       margin-top: 48px;
