--- a/sass/modules/about-us-area/_about-us-area-one.scss
+++ b/sass/modules/about-us-area/_about-us-area-one.scss
@@ -40,6 +40,7 @@
           }
           .about-image-card{
             position: relative;
+            margin-right: 116px;
             .shape{
                 position: absolute;
                 bottom: -57px;
